--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
-name: python 3.10
+name: base
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
+  - python=3.9
   - numpy=1.22.0
   - pandas=1.4.4
   - matplotlib=3.5.2
